Fix scrollbar FR

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -311,7 +311,7 @@
 }
 
 pre.highlight{
-	overflow-x: scroll;
+	overflow-x: auto;
 }
 
 html {
